--- a/main/resources/application.properties
+++ b/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.application.name=configuration-server
 server.port=8888
+spring.cloud.config.server.git.uri=https://github.com/kudzic/configuration-server
+spring.cloud.config.server.git.username=kudzic
+spring.cloud.config.server.git.password=P@55w0rdKUDZI
+spring.cloud.config.server.git.clone-on-start=true
